@@ -1,5 +1,15 @@
 ##Text encoding: utf-8
 
+2007-08-30  Jean Bréfort  <jean.brefort@normalesup.org>
+	libs/gcu/residue.cc: add an bool to check if symbol is
+	ambiguous (if an element has the same symbol).
+	libs/gcu/residue.h: ditto.
+	program/calc/Makefile.am: remove residue.*.
+	program/calc/gchemcalc.cc: load the residues database.
+	program/calc/residue.cc: removed since everything is needed
+	by gcu::Formula and pertains to libgcu.
+	program/calc/residue.h: ditto.
+
 2007-08-27  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcu/crystaldoc.cc: update openbabel related code.
 	* programs/crystal/document.cc: ditto.
